objects/wkfsl__PlanningPeriod__c.object
<CustomObject>
    <fields>
        <fullName>wkfsl__Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Planning Periods</relationshipLabel>
        <relationshipName>Planning_Periods</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkfsl__State__c</fullName>
        <label>State</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>wkfsl__Trigger_Date__c</fullName>
        <label>Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__Weekdays__c</fullName>
        <label>Weekdays</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monday</fullName>
                </value>
                <value>
                    <fullName>Tuesday</fullName>
                </value>
                <value>
                    <fullName>Wednesday</fullName>
                </value>
                <value>
                    <fullName>Thursday</fullName>
                </value>
                <value>
                    <fullName>Friday</fullName>
                </value>
                <value>
                    <fullName>Saturday</fullName>
                </value>
                <value>
                    <fullName>Sunday</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wkfsl__completionDate__c</fullName>
        <label>completionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__endDate__c</fullName>
        <label>endDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>wkfsl__startDate__c</fullName>
        <label>startDate</label>
        <type>Date</type>
    </fields>
    <label>Planning Period</label>
    <listViews>
        <fullName>wkfsl__All</fullName>
        <columns>NAME</columns>
        <columns>wkfsl__completionDate__c</columns>
        <columns>wkfsl__endDate__c</columns>
        <columns>wkfsl__startDate__c</columns>
        <columns>wkfsl__State__c</columns>
        <columns>wkfsl__Trigger_Date__c</columns>
        <columns>wkfsl__Weekdays__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PlannerTrigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Planning Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>